tests/baselines/reference/typeofInternalModules.errors.txt
==== tests/cases/compiler/typeofInternalModules.ts (5 errors) ====
    module Outer {
        export module instantiated {
            export class C { }
        }
        export module uninstantiated {
            export interface P { }
        }
    }
    
    import importInst = Outer.instantiated;
    import importUninst = Outer.uninstantiated;
    
    var x1: typeof importInst.C = importInst.C;
    var x2: importInst.C = new x1();
    var x3: typeof importUninst.P; // Error again
                   ~~~~~~~~~~~~
!!! typeofInternalModules.ts(15,16): error TS2095: Could not find symbol 'importUninst'.
    
    var x4: Outer = Outer;
            ~~~~~
!!! typeofInternalModules.ts(17,9): error TS4022: Type reference cannot refer to container 'Outer'.
    var x5: typeof importInst;
    x5 = Outer;
    ~~
!!! typeofInternalModules.ts(19,1): error TS2012: Cannot convert 'typeof Outer' to 'typeof Outer.instantiated':
!!! 	Type 'typeof Outer' is missing property 'Outer.instantiated.C' from type 'typeof Outer.instantiated'.
    x5 = Outer.instantiated;
    var x6: typeof importUninst;
                   ~~~~~~~~~~~~
!!! typeofInternalModules.ts(21,16): error TS2095: Could not find symbol 'importUninst'.
    var x7: typeof Outer = Outer;
    x7 = importInst;
    ~~
!!! typeofInternalModules.ts(23,1): error TS2012: Cannot convert 'typeof Outer.instantiated' to 'typeof Outer':
!!! 	Type 'typeof Outer.instantiated' is missing property 'Outer.instantiated' from type 'typeof Outer'.
    